[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/SetupSections/EndGameSetupSection.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/BlackOpsOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/Widgets/LeftRightWidget.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Widgets/PlusMinusWidget.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=2]

size = 24
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings", "font_data" ]

[node name="EndGameSetupSection" type="ColorRect"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 240.0
margin_right = 530.0
margin_bottom = 308.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.576471, 0.513726, 0.231373, 1 )
script = ExtResource( 1 )
_sections_unfolded = [ "Rect", "Script" ]

[node name="Label" type="Label" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_right = 288.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "End Game Objective"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="EndGameWidget" parent="." instance=ExtResource( 3 )]
margin_top = 28.0
margin_bottom = 64.0

[node name="PlusMinusWidget" parent="." instance=ExtResource( 4 )]

[connection signal="LRWidChanged" from="EndGameWidget" to="." method="_on_EndGameWidget_LRWidChanged" flags=3]
[connection signal="PMWidChanged" from="PlusMinusWidget" to="." method="_on_PlusMinusWidget_PMWidChanged" flags=3]
